# DAreconstructedGLYPH

./: .gitignore  03-data-convergence.html  AGENTS.md  ASSEMBLY_RUNBOOK.md  BUCKET_README.md  COMPUTER_INCIDENT_RECORD_2026-05-15.md  GLYPH.md  GLYPH_WORKSPACE_POLICY.json  README.md  absence_record_schema_v1.json  branch_authority_schema_v1.json  docs_index.html  event_schema_v1.json  filing.html  glyph_constraint.py  glyph_operator_contract.md  glyph_runtime.py  glyph_voice_render.html  index.html  pyproject.toml  raw_event_schema_v1.json  render.yaml  research.html  scholarship.html  server.py  shape_index.py  sync_to_spaces.py
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml
automation/: disc_workflow.py  ingest_raw.py  unicode_record.py  validate_raw.py
controller/: __init__.py  main.py
data/: messages.json
docs/ai_book/: ledger_event.json
events/: gev_48d6a4c81c91.json  gev_8686630c7c6f.json
game/: index.html
heyer-livin-site/: docs_index.html  index.html  styles.css
python_engine/: glyph_heart.py  glyph_spine.py  glyph_terminal.py  glyph_voice.py
site/: clock.json  glyph-launch.html
workflows-demo/: .env.example  README.md  package-lock.json  package.json
workflows-demo/src/: main.ts
